package.json 경로 변경

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jy022222.github.io/react-for-beginners"
+  "homepage": "https://jy022222.github.io/movieapp"
 }
